# qsym

./: .gitignore  .gitmodules  README.md  notes  pyproject.toml  qsym.cabal
benchmarks/: Deutsch-Jozsa_algorithm_qiskit.ipynb  Discrete_log_qiskit.py  Grover_qiskit.ipynb  amplitude amplification through Ry gates.ipynb  hamming weights n qubits.ipynb  random13.ipynb
pybackend/: AbstractProgramVisitor.py  CollectKind.py  ConstraintSolver.py  Exp.g4  Exp.interp  Exp.tokens  ExpLexer.interp  ExpLexer.py  ExpListener.py  ExpParser.py  ExpVisitor.py  ExprTransformer.py  LocusCollector.py  OpType.py  PrettyPrinter.py  ProgramTransfer.py  ProgramTransformer.py  ProgramVisitor.py  Programmer.py  QOperator.py  SPVisitor.py  SimpAExp.py  StateChecker.py  StateCollector.py  StateGen.py  StateManager.py  SubstAExp.py  SymEx.py  TypeChecker.py  TypeCollector.py  inputs_generator.py  sp_test.py  utils.py
qsym.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
qsym_qiskit_benchmarks/: BV_algorithm.ipynb  Bell_states.py  Deutsch-Jozsa_algorithm_qiskit 2  Grover_qiskit.ipynb  QPE_sourcecode.py  amplitude amplification through Ry gates 60 qubits.ipynb  amplitude_estimation.ipynb  amplitude_estimation_sourcecode.py  distinct element superposition n qubits.ipynb  dj_130.ipynb  dj_indep_opt0_130.qasm  hamming weights n qubits 2.ipynb  hamming weights n qubits.ipynb  info.txt  n-basis uniform state prep 8 qubit.ipynb  randomcircuit_indep_opt3_13.qasm
src/: AbstractTargetVisitor.py  BindCollector.py  CollectKind.py  EqualityChecker.py  EqualityVisitor.py  Exp.g4  ExpLexer.interp  Printer.py  (+33 more)
(+195 files in other folders)
